--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -36,6 +36,15 @@
 				<artifactId>wildfly-maven-plugin</artifactId>
 				<version>1.1.0.Alpha7</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
